[tool.poetry]
name = "certbot-dns-cloudns"
version = "0.6.0"
description = "ClouDNS DNS Authenticator plugin for Certbot"
authors = ["Simon Marti <simon.marti@inventage.com>"]
license = "Unlicense"
repository = "https://github.com/inventage/certbot-dns-cloudns"
readme = "README.rst"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: The Unlicense (Unlicense)',
    'Intended Audience :: System Administrators',
    'Topic :: Internet :: Name Service (DNS)',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Security',
    'Topic :: System :: Installation/Setup',
    'Topic :: System :: Networking',
    'Topic :: System :: Systems Administration',
    'Topic :: Utilities',
    'Environment :: Plugins',
    'Operating System :: OS Independent',
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
acme = ">=2.7.4,<2.8.0"
certbot = ">=2.7.4,<2.8.0"
cloudns-api = "0.9.3"
dnspython = ">=2.3.0,<3.0.0"
"zope.interface" = ">=5.4.0"

[tool.poetry.plugins."certbot.plugins"]
dns-cloudns = "certbot_dns_cloudns._internal.authenticator:Authenticator"

[tool.poetry.dev-dependencies]
isort = "5.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
